[package]
name = "luhney"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "bin/cli.rs"

[[bin]]
name = "repl"
path = "bin/repl.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
rustyline = "10.0.0"
wasm-bindgen = "0.2.80"
