[package]
name = "luhney"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "bin/cli.rs"
required-features = ["cli-deps"]

[[bin]]
name = "repl"
path = "bin/repl.rs"
required-features = ["repl-deps"]

[features]
default = ["wasm-deps"]
cli-deps = ["dep:clap"]
repl-deps = ["dep:rustyline"]
wasm-deps = ["dep:wasm-bindgen"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"], optional = true }
rustyline = { version = "10.0.0", optional = true }
wasm-bindgen = { version = "0.2.80", optional = true }
